[tool.poetry]
name = "chaoying.dev"
version = "0.1.0"
description = ""
authors = ["Chaoying <chaunceywe@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
starlette = "^0.15.0"
loguru = "^0.5.3"
Jinja2 = "^3.0.2"
python-multipart = "^0.0.5"
python-slugify = "^5.0.2"
aiohttp = "^3.7.4"
itsdangerous = "^2.0.1"
PyJWT = "^2.2.0"
Markdown = "^3.3.4"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
tortoise-orm = {extras = ["asyncpg"], version = "^0.17.8"}
aerich = "^0.5.8"
asgi-sitemaps = "^0.3.2"
pangu = "^4.0.6"
markdown-link-attr-modifier = "^0.2.0"
Pygments = "^2.10.0"
beautifulsoup4 = "^4.10.0"
jieba = "^0.42.1"
markdown-captions = {git = "https://github.com/Evidlo/markdown_captions.git", rev = "alt"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
isort = "^5.9.3"
flake8 = "^4.0.1"
mypy = "^0.910"
ipython = "^7.28.0"
coverage = "^6.0.2"
black = "^21.9b0"
pytest-asyncio = "^0.15.1"
aioresponses = "^0.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
